--- a/MauiLabs.Api/MauiLabs.Api.csproj
+++ b/MauiLabs.Api/MauiLabs.Api.csproj
@@ -17,6 +17,13 @@
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
         <PackageReference Include="AutoMapper" Version="12.0.1" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.58.0" />
+        <PackageReference Include="Grpc.Core.Api" Version="2.58.0" />
+        <PackageReference Include="Grpc.Net.Common" Version="2.58.0" />
+        <PackageReference Include="Grpc.Tools" Version="2.59.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
@@ -39,8 +46,8 @@
         <ProjectReference Include="..\MauiLabs.Dal\MauiLabs.Dal.csproj" />
     </ItemGroup>
 
-    <ItemGroup>
-      <Folder Include="Controllers\ApiModels\Admin\Responses\" />
-    </ItemGroup>
+	<ItemGroup>
+		<Protobuf Include="RemoteServices\ProtoContracts\cookingrecipe_user.proto" GrpcServices="Server" />
+	</ItemGroup>
 
 </Project>
