--- a/MauiLabs.Api/MauiLabs.Api.csproj
+++ b/MauiLabs.Api/MauiLabs.Api.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+		<PackageReference Include="Calzolari.Grpc.AspNetCore.Validation" Version="6.3.0" />
 		<PackageReference Include="FluentValidation" Version="11.5.2" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
         <PackageReference Include="AutoMapper" Version="12.0.1" />
@@ -39,6 +40,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
