fix: [ver=0.8] configure database url

--- a/MauiLabs.Api/appsettings.Development.json
+++ b/MauiLabs.Api/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "cookingrecipedb": "Host=localhost;Database=cookingrecipesdb;Username=postgres;Password=prolodgy778"
+    },
+    "Authentication": {
+        "SecretKey": "c08838a2-1393-450f-bac8-b42e384a54e9",
+        "Issuer": "byterbrod387",
+        "Audience": "byterbrod387"
     }
-  }
 }
