feat: [ver=0.9] add some stuff. lest celebrate and...

--- a/MauiLabs.Api/appsettings.Development.json
+++ b/MauiLabs.Api/appsettings.Development.json
@@ -12,5 +12,6 @@
         "SecretKey": "c08838a2-1393-450f-bac8-b42e384a54e9",
         "Issuer": "byterbrod387",
         "Audience": "byterbrod387"
-    }
+    },
+    "ApiKey": "d98bfe8d-0127-4708-b537-08708f72698b"
 }
