--- a/MauiLabs.View/MauiLabs.View.csproj
+++ b/MauiLabs.View/MauiLabs.View.csproj
@@ -13,8 +13,7 @@
 
 		<!-- Display name -->
 		<ApplicationTitle>Книга рецептов</ApplicationTitle>
-
-		<RunAOTCompilation>false</RunAOTCompilation>
+		<RunAOTCompilation>False</RunAOTCompilation>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.MauiLabs.View</ApplicationId>
@@ -24,14 +23,14 @@
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
 
-		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">26.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">29.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\cookingrecipe.png" Color="#512BD4" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
@@ -48,6 +47,8 @@
 
 	<ItemGroup>
 	  <None Remove="appsettings.json" />
+	  <None Remove="Resources\Images\Profile\login.png" />
+	  <None Remove="Resources\Images\Profile\registration.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -61,6 +62,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="6.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.11" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
@@ -81,20 +83,33 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Pages\AuthorizationPage.xaml">
+	  <MauiXaml Update="Commons\ContentViews\LoadingContentView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\RegistrationPage.xaml">
+	  <MauiXaml Update="Commons\ContentViews\ValidationEntryView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\ProfilePages\AuthorizationPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\ProfilePages\RegistrationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Resources\Images\" />
 	  <Folder Include="Resources\Styles\" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiImage Include="Resources\Images\Profile\login.png" />
+	  <MauiImage Include="Resources\Images\Profile\registration.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Pages\ProfilePages\ProfileShell.xaml.cs">
+	    <DependentUpon>ProfileShell.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="CookingRecipeApp.xaml.cs">
 	    <DependentUpon>CookingRecipeApp.xaml</DependentUpon>
 	  </Compile>
