--- a/MauiLabs.View/MauiLabs.View.csproj
+++ b/MauiLabs.View/MauiLabs.View.csproj
@@ -49,8 +49,14 @@
 
 	<ItemGroup>
 	  <None Remove="appsettings.json" />
+	  <None Remove="Resources\Images\Profile\defaultprofile.png" />
+	  <None Remove="Resources\Images\Profile\deleteicon.png" />
+	  <None Remove="Resources\Images\Profile\loadimageicon.png" />
 	  <None Remove="Resources\Images\Profile\login.png" />
+	  <None Remove="Resources\Images\Profile\logouticon.png" />
 	  <None Remove="Resources\Images\Profile\registration.png" />
+	  <None Remove="Resources\Images\Profile\reloadicon.png" />
+	  <None Remove="Resources\Images\Recipe\flyoutheader.jpg" />
 	  <None Remove="Resources\Images\Recipe\starRegular.png" />
 	  <None Remove="Resources\Images\Recipe\starSolid.png" />
 	  <None Remove="Resources\Raw\defaultRecipe.jpg" />
@@ -85,6 +91,7 @@
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.0" />
 		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 	</ItemGroup>
 
@@ -93,6 +100,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Commons\ContentViews\LoadingContentView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Commons\ContentViews\PaginationView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Commons\ContentViews\RatingStarView.xaml">
@@ -107,7 +117,7 @@
 	  <MauiXaml Update="Pages\ProfilePages\AuthorizationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\ProfilePages\ProfileInfo.xaml">
+	  <MauiXaml Update="Pages\ProfilePages\ProfileInfoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\ProfilePages\RegistrationPage.xaml">
@@ -129,9 +139,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<MauiImage Include="Resources\Images\Profile\deleteicon.png" />
+		<MauiImage Include="Resources\Images\Profile\loadimageicon.png" />
 		<MauiImage Include="Resources\Images\Profile\login.png" />
+		<EmbeddedResource Include="Resources\Images\Profile\defaultprofile.png">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</EmbeddedResource>
+		<MauiImage Include="Resources\Images\Profile\logouticon.png" />
 		<MauiImage Include="Resources\Images\Profile\registration.png" />
 		<MauiImage Include="Resources\Images\background.png" />
+		<MauiImage Include="Resources\Images\Profile\reloadicon.png" />
+		<MauiImage Include="Resources\Images\Recipe\flyoutheader.jpg" />
 		<MauiImage Include="Resources\Images\Recipe\starregular.png" />
 		<MauiImage Include="Resources\Images\Recipe\starsolid.png" />
 	</ItemGroup>
@@ -139,6 +157,9 @@
 	<ItemGroup>
 	  <Compile Update="CookingRecipeApp.xaml.cs">
 	    <DependentUpon>CookingRecipeApp.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Pages\ProfilePages\ProfileInfoPage.xaml.cs">
+	    <DependentUpon>ProfileInfoPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
