feat: [ver=*] add publisher page

--- a/MauiLabs.View/MauiLabs.View.csproj
+++ b/MauiLabs.View/MauiLabs.View.csproj
@@ -133,6 +133,12 @@
 	  <MauiXaml Update="Pages\ProfilePages\RegistrationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\RecipePages\EditRecipePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\RecipePages\PublishedListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\RecipePages\RecipesListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
