--- a/MauiLabs.View/MauiLabs.View.csproj
+++ b/MauiLabs.View/MauiLabs.View.csproj
@@ -61,6 +61,8 @@
 	  <None Remove="Resources\Images\Recipe\bookmark.png" />
 	  <None Remove="Resources\Images\Recipe\cooking.png" />
 	  <None Remove="Resources\Images\Recipe\flyoutheader.jpg" />
+	  <None Remove="Resources\Images\Recipe\recipelist.png" />
+	  <None Remove="Resources\Images\Recipe\recommend.png" />
 	  <None Remove="Resources\Images\Recipe\starRegular.png" />
 	  <None Remove="Resources\Images\Recipe\starSolid.png" />
 	  <None Remove="Resources\Raw\defaultRecipe.jpg" />
@@ -133,10 +135,16 @@
 	  <MauiXaml Update="Pages\ProfilePages\RegistrationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\RecipePages\CommentsListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\RecipePages\EditRecipePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\RecipePages\PublishedListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\RecipePages\RecipeInfoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\RecipePages\RecipesListPage.xaml">
@@ -170,6 +178,8 @@
 		<MauiImage Include="Resources\Images\Recipe\bookmark.png" />
 		<MauiImage Include="Resources\Images\Recipe\cooking.png" />
 		<MauiImage Include="Resources\Images\Recipe\flyoutheader.jpg" />
+		<MauiImage Include="Resources\Images\Recipe\recipelist.png" />
+		<MauiImage Include="Resources\Images\Recipe\recommend.png" />
 		<MauiImage Include="Resources\Images\Recipe\starregular.png" />
 		<MauiImage Include="Resources\Images\Recipe\starsolid.png" />
 	</ItemGroup>
